--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "tsx index.ts"
+    "hmac": "tsx hmac-rest-api-trading.ts",
+    "ed25519": "tsx ed25519-websocket-trading.ts"
+
   },
   "devDependencies": {
     "@types/node": "^22.13.13",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "dotenv": "^16.5.0",
@@ -32,6 +35,7 @@
   },
   "dependencies": {
     "@sodot/sodot-hmac-key-sharing": "^1.1.0",
+    "jose": "^6.0.11",
     "ws": "^8.18.2"
   }
 }
